// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlledSearchableDropdown component > should display default value 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r6:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-8 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value="4"
    />
    <span
      class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <span
        class="el-intent-default el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name search"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.71 20.29L16.31 14.9C17.4084 13.5032 18.0038 11.7769 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.7769 18.0038 13.5032 17.4084 14.9 16.31L20.29 21.71C20.4778 21.8993 20.7334 22.0058 21 22.0058C21.2666 22.0058 21.5222 21.8993 21.71 21.71C21.8993 21.5222 22.0058 21.2666 22.0058 21C22.0058 20.7334 21.8993 20.4778 21.71 20.29ZM4 10C4 6.68629 6.68629 4 10 4C13.3137 4 16 6.68629 16 10C16 13.3137 13.3137 16 10 16C6.68629 16 4 13.3137 4 10Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value="Forth"
    />
    <span
      class="mocked-styled-12 el-searchable-dropdown-close-button el-icon"
    >
      <svg
        fill="none"
        height="1em"
        role="img"
        title="Icon image with name close"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.3608 13.8296L18.0208 19.4896C18.2652 19.775 18.6489 19.8993 19.0142 19.8114C19.3795 19.7235 19.6647 19.4383 19.7526 19.073C19.8405 18.7077 19.7162 18.324 19.4308 18.0796L13.7708 12.4196L19.4308 6.75958C19.7162 6.51519 19.8405 6.13146 19.7526 5.76616C19.6647 5.40086 19.3795 5.11564 19.0142 5.02777C18.6489 4.93989 18.2652 5.0642 18.0208 5.34958L12.3608 11.0096L6.70079 5.34958C6.31076 4.96185 5.68083 4.96185 5.29079 5.34958C4.90307 5.73961 4.90307 6.36954 5.29079 6.75958L10.9508 12.4196L5.29079 18.0796C4.90307 18.4696 4.90307 19.0995 5.29079 19.4896C5.68083 19.8773 6.31076 19.8773 6.70079 19.4896L12.3608 13.8296Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ControlledSearchableDropdown component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r4:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-8 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value=""
    />
    <span
      class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <span
        class="el-intent-default el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name search"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.71 20.29L16.31 14.9C17.4084 13.5032 18.0038 11.7769 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.7769 18.0038 13.5032 17.4084 14.9 16.31L20.29 21.71C20.4778 21.8993 20.7334 22.0058 21 22.0058C21.2666 22.0058 21.5222 21.8993 21.71 21.71C21.8993 21.5222 22.0058 21.2666 22.0058 21C22.0058 20.7334 21.8993 20.4778 21.71 20.29ZM4 10C4 6.68629 6.68629 4 10 4C13.3137 4 16 6.68629 16 10C16 13.3137 13.3137 16 10 16C6.68629 16 4 13.3137 4 10Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchableDropdown component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r0:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-8 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value=""
    />
    <span
      class="mocked-styled-11 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <span
        class="el-intent-default el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name search"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.71 20.29L16.31 14.9C17.4084 13.5032 18.0038 11.7769 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.7769 18.0038 13.5032 17.4084 14.9 16.31L20.29 21.71C20.4778 21.8993 20.7334 22.0058 21 22.0058C21.2666 22.0058 21.5222 21.8993 21.71 21.71C21.8993 21.5222 22.0058 21.2666 22.0058 21C22.0058 20.7334 21.8993 20.4778 21.71 20.29ZM4 10C4 6.68629 6.68629 4 10 4C13.3137 4 16 6.68629 16 10C16 13.3137 13.3137 16 10 16C6.68629 16 4 13.3137 4 10Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-13 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchableDropdownSearchLabel component > should match a snapshot 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-14 el-searchable-dropdown-search-label el-deprecated-label"
  >
    I am a label
  </label>
</DocumentFragment>
`;
